--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebaseui": "^6.0.0",
     "react-scripts": "5.0.1",
     "sass": "^1.58.3"
   },
