--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:deploy": "env-cmd -f .env npm run build && firebase deploy -P expense-tracker-5c6c8"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "prettier-eslint": "^15.0.1"
   }
 }
